--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,25 +3,24 @@
 {% block title %}Hello IndexController!
 {% endblock %}
 
-{% block stylesheets %}
-	<link rel="stylesheet" href="{{ asset('build/styles/_index.css') }}">
-{% endblock %}
-
 {% block body %}
-<div class="container w-100 h-50">
-            <img src="{{ asset('build/images/3.png') }}" alt="food">
-            <h1 class="mt-4">Welcome to what to eat !</h1>
+<div class="container">
+    <div class="position-relative">
+        <img src="{{ asset('build/images/3.png') }}" alt="food" class="w-100">
+        <h1 class="position-absolute top-50 start-50 translate-middle text-center">Welcome to what to eat!</h1>
+    </div>
 </div>
 
 
-		<h2 class="text-center mt-4">what food u have ?
+<div class="text-center">
+		<h2 class="mt-4 mb-4">what food u have ?</h2>
 			{% include '/FoodType.html.twig' %}
-		</h2>
 
 		{% if meal is not null %}
-			<h2 class="text-center mt-4">You can prepare:
+			<h2>You can prepare:
 				{{ meal.name }}</h2>
 		{% else %}
-			<h2 class="text-center mt-4">You can't prepare any meal with the selected ingredients.</h2>
+			<h2 class="mt-4 mb-4">You can't prepare any meal with the selected ingredients.</h2>
 		{% endif %}
+		</div>
 {% endblock %}
