--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,5 +1,5 @@
 $primary: #FF6600;
-$secondary: #F9C906;
+$secondary: #000000;
 $success: #008000;
 $input-placeholder-color: White;
 $font-family-base: 'Roboto Condensed', sans-serif;
